ADGUB-2 Fixed a few warnings

--- a/src/main/resources/fxml/registration.fxml
+++ b/src/main/resources/fxml/registration.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -10,7 +8,7 @@
     <children>
         <BorderPane prefHeight="200.0" prefWidth="200.0">
             <center>
-                <Button mnemonicParsing="false" onAction="#handleRegistrationButton" fx:id="RegistrationButton" prefHeight="26.0" prefWidth="221.0" text="Înregistarare bibliotecar" BorderPane.alignment="CENTER" />
+                <Button mnemonicParsing="false" onAction="#handleRegistrationButton" prefHeight="26.0" prefWidth="221.0" text="Înregistarare bibliotecar" BorderPane.alignment="CENTER" />
             </center>
         </BorderPane>
     </children>
