--- a/src/main/resources/fxml/registration.fxml
+++ b/src/main/resources/fxml/registration.fxml
@@ -13,9 +13,6 @@
 <GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.RegistrationController">
     <children>
         <BorderPane maxHeight="400.0" maxWidth="400.0" prefHeight="400.0" prefWidth="400.0">
-         <bottom>
-            <Button mnemonicParsing="false" onAction="#handleRegisterAction" text="Register" BorderPane.alignment="CENTER" />
-         </bottom>
          <center>
             <GridPane prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
               <columnConstraints>
@@ -40,12 +37,12 @@
                         <Insets right="5.0" />
                      </GridPane.margin>
                   </TextField>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" GridPane.rowIndex="1">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username*:" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" GridPane.rowIndex="2">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password*:" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="5.0" />
                      </GridPane.margin>
@@ -91,6 +88,25 @@
                </children>
             </GridPane>
          </center>
+         <bottom>
+            <GridPane BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" onAction="#handleRegisterAction" text="Register" GridPane.halignment="LEFT">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Text fx:id="registrationMessage" fill="#f81601" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+               </children>
+            </GridPane>
+         </bottom>
         </BorderPane>
     </children>
     <columnConstraints>
