--- a/src/main/resources/fxml/add_books.fxml
+++ b/src/main/resources/fxml/add_books.fxml
@@ -11,9 +11,10 @@
       <TextField fx:id="PiecesField" layoutX="215.0" layoutY="250.0" prefHeight="26.0" prefWidth="192.0" />
       <Label layoutX="41.0" layoutY="94.0" prefHeight="26.0" prefWidth="147.0" text="Titlu carte" />
       <Label layoutX="41.0" layoutY="150.0" prefHeight="18.0" prefWidth="155.0" text="Nume autor" />
-      <Label layoutX="41.0" layoutY="203.0" prefHeight="18.0" prefWidth="155.0" text="Durată împrumut" />
-      <Label layoutX="37.0" layoutY="240.0" prefHeight="46.0" prefWidth="162.0" text="Număr exemplare" />
+      <Label layoutX="41.0" layoutY="203.0" prefHeight="18.0" prefWidth="155.0" text="Durată împrumut *" />
+      <Label layoutX="37.0" layoutY="240.0" prefHeight="46.0" prefWidth="162.0" text="Număr exemplare *" />
       <Button layoutX="389.0" layoutY="299.0" mnemonicParsing="false" onAction="#add_books_check" prefHeight="63.0" prefWidth="111.0" text="Adaugă" />
-      <Label fx:id="ErrorField" layoutX="56.0" layoutY="322.0" prefHeight="46.0" prefWidth="238.0" textFill="#d51919" />
+      <Label fx:id="ErrorField" layoutX="80.0" layoutY="307.0" prefHeight="46.0" prefWidth="238.0" textFill="#d51919" />
+      <Label layoutX="14.0" layoutY="353.0" prefHeight="35.0" prefWidth="173.0" text="* Date numerice" />
    </children>
 </AnchorPane>
