--- a/src/main/resources/fxml/add_books.fxml
+++ b/src/main/resources/fxml/add_books.fxml
@@ -16,5 +16,6 @@
       <Button layoutX="389.0" layoutY="299.0" mnemonicParsing="false" onAction="#add_books_check" prefHeight="63.0" prefWidth="111.0" text="Adaugă" />
       <Label fx:id="ErrorField" layoutX="80.0" layoutY="307.0" prefHeight="46.0" prefWidth="238.0" textFill="#d51919" />
       <Label layoutX="14.0" layoutY="353.0" prefHeight="35.0" prefWidth="173.0" text="* Date numerice" />
+      <Button layoutX="448.0" layoutY="37.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
    </children>
 </AnchorPane>
