--- a/src/main/resources/fxml/librariansregistration.fxml
+++ b/src/main/resources/fxml/librariansregistration.fxml
@@ -10,92 +10,88 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.171"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.LibrariansRegistrationController">
+<GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.LibrariansRegistrationController">
     <columnConstraints>
-        <ColumnConstraints/>
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints/>
+        <RowConstraints />
     </rowConstraints>
     <BorderPane maxHeight="400.0" maxWidth="400.0" prefHeight="400.0" prefWidth="400.0">
         <center>
             <GridPane prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
                 </rowConstraints>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registration" GridPane.columnSpan="2"
-                      GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"/>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registration" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
                 <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <opaqueInsets>
-                    <Insets/>
+                    <Insets />
                 </opaqueInsets>
                 <GridPane.margin>
-                    <Insets right="5.0"/>
+                    <Insets right="5.0" />
                 </GridPane.margin>
                 </TextField>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username*:" GridPane.rowIndex="1">
                 <GridPane.margin>
-                    <Insets left="5.0"/>
+                    <Insets left="5.0" />
                 </GridPane.margin>
                 </Text>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password*:" GridPane.rowIndex="2">
                 <GridPane.margin>
-                    <Insets left="5.0"/>
-                </GridPane.margin>
-                </Text>
-                <TextField fx:id="fullnameField" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                <opaqueInsets>
-                    <Insets/>
-                </opaqueInsets>
-                <GridPane.margin>
-                    <Insets right="5.0"/>
-                </GridPane.margin>
-                </TextField>
-                <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                <GridPane.margin>
-                    <Insets right="5.0"/>
-                </GridPane.margin>
-                </TextField>
-                <TextField fx:id="phonenumberField" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                <GridPane.margin>
-                    <Insets right="5.0"/>
-                </GridPane.margin>
-                </TextField>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" GridPane.rowIndex="3">
-                <GridPane.margin>
-                    <Insets left="5.0"/>
-                </GridPane.margin>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" GridPane.rowIndex="4">
-                <GridPane.margin>
-                    <Insets left="5.0"/>
-                </GridPane.margin>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" GridPane.rowIndex="5">
-                <GridPane.margin>
-                    <Insets left="5.0"/>
+                    <Insets left="5.0" />
                 </GridPane.margin>
                 </Text>
                 <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <GridPane.margin>
-                    <Insets right="5.0"/>
+                    <Insets right="5.0" />
                 </GridPane.margin>
                 </PasswordField>
-                <Button mnemonicParsing="false" onAction="#goBack" text="Back" GridPane.columnIndex="1"
-                        GridPane.halignment="RIGHT">
+                <TextField fx:id="fullnameField" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <opaqueInsets>
+                    <Insets />
+                </opaqueInsets>
                 <GridPane.margin>
-                    <Insets right="5.0"/>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+                </TextField>
+                <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+                </TextField>
+                <TextField fx:id="phonenumberField" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <GridPane.margin>
+                    <Insets right="5.0" />
+                </GridPane.margin>
+                </TextField>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" GridPane.rowIndex="3">
+                <GridPane.margin>
+                    <Insets left="5.0" />
+                </GridPane.margin>
+                </Text>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" GridPane.rowIndex="4">
+                <GridPane.margin>
+                    <Insets left="5.0" />
+                </GridPane.margin>
+                </Text>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" GridPane.rowIndex="5">
+                <GridPane.margin>
+                    <Insets left="5.0" />
+                </GridPane.margin>
+                </Text>
+                <Button mnemonicParsing="false" onAction="#goBack" text="Back" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                <GridPane.margin>
+                    <Insets right="5.0" />
                 </GridPane.margin>
                 </Button>
             </GridPane>
@@ -103,20 +99,18 @@
         <bottom>
             <GridPane BorderPane.alignment="CENTER">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
-                <Button mnemonicParsing="false" onAction="#handleRegisterAction" text="Register"
-                        GridPane.halignment="LEFT">
+                <Button mnemonicParsing="false" onAction="#handleRegisterAction" text="Register" GridPane.halignment="LEFT">
                 <GridPane.margin>
-                    <Insets left="5.0"/>
+                    <Insets left="5.0" />
                 </GridPane.margin>
                 </Button>
-                <Text fx:id="registrationMessage" fill="#f81601" strokeType="OUTSIDE" strokeWidth="0.0"
-                      GridPane.columnIndex="1" GridPane.halignment="RIGHT"/>
+                <Text fx:id="registrationMessage" fill="#f81601" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
             </GridPane>
         </bottom>
     </BorderPane>
