--- a/src/main/resources/fxml/tableview_refund.fxml
+++ b/src/main/resources/fxml/tableview_refund.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableviewRefundController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableviewRefundController">
     <children>
         <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Carti imprumutate:" />
-        <Button layoutX="483.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="86.0" text="Back" />
+        <Button layoutX="541.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="86.0" text="Back" />
         <TableView fx:id="tableView" layoutX="8.0" layoutY="77.0" prefHeight="309.0" prefWidth="430.0">
             <columns>
                 <TableColumn fx:id="dateColumn" prefWidth="122.0" text="Date" />
@@ -14,7 +14,8 @@
             </columns>
         </TableView>
       <Label layoutX="438.0" layoutY="77.0" prefHeight="25.0" prefWidth="138.0" text="Introdu titlul:" />
-      <TextField fx:id="refundField" layoutX="445.0" layoutY="116.0" prefHeight="55.0" prefWidth="123.0" />
-      <Button layoutX="445.0" layoutY="200.0" mnemonicParsing="false" onAction="#handleRefundaction" prefHeight="43.0" prefWidth="123.0" text="Restituire" />
+      <TextField fx:id="refundField" layoutX="445.0" layoutY="116.0" prefHeight="55.0" prefWidth="183.0" />
+      <Button layoutX="445.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleRefundaction" prefHeight="43.0" prefWidth="183.0" text="Restituire" />
+      <Label fx:id="refundMessageField" layoutX="444.0" layoutY="263.0" prefHeight="43.0" prefWidth="183.0" />
     </children>
 </AnchorPane>
