ADGUB-35 Modificare in tabel weeks->days si modificare fisiere fxml in limba engleza

--- a/src/main/resources/fxml/reader.fxml
+++ b/src/main/resources/fxml/reader.fxml
@@ -5,8 +5,8 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.ReaderController">
    <children>
-      <Button layoutX="38.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleBorrowButton" prefHeight="92.0" prefWidth="216.0" text="Împrumut carte" />
-      <Button layoutX="333.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleRefundButton" prefHeight="92.0" prefWidth="222.0" text="Restituire carte" />
+      <Button layoutX="38.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleBorrowButton" prefHeight="92.0" prefWidth="216.0" text="Borrow books" />
+      <Button layoutX="333.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleRefundButton" prefHeight="92.0" prefWidth="222.0" text="Return books" />
       <Button layoutX="452.0" layoutY="285.0" mnemonicParsing="false" onAction="#signOut" prefHeight="44.0" prefWidth="105.0" text="Sign Out" />
    </children>
 </AnchorPane>
