--- a/src/main/resources/fxml/librarian.fxml
+++ b/src/main/resources/fxml/librarian.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.LibrarianController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.LibrarianController">
     <children>
-        <Button layoutX="14.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleReadersRegistrationButton" prefHeight="52.0" prefWidth="154.0" text="Creare conturi" />
-        <Button layoutX="200.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleAddBookAction" prefHeight="52.0" prefWidth="147.0" text="Adaugare carte" />
-        <Button layoutX="370.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleTableViewReadersDataButton" prefHeight="52.0" prefWidth="181.0" text="Vizualizare date cititori" />
+        <Button layoutX="14.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleReadersRegistrationButton" prefHeight="52.0" prefWidth="154.0" text="Create accounts" />
+        <Button layoutX="200.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleAddBookAction" prefHeight="52.0" prefWidth="147.0" text="Add books" />
+        <Button layoutX="370.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleTableViewReadersDataButton" prefHeight="52.0" prefWidth="181.0" text="Readers data" />
         <Label fx:id="lista_cartiLabel" layoutX="18.0" prefHeight="271.0" prefWidth="549.0" />
         <Button layoutX="446.0" layoutY="92.0" mnemonicParsing="false" onAction="#signOut" prefHeight="44.0" prefWidth="105.0" text="Sign Out" />
     </children>
