--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -20,12 +20,12 @@
     </rowConstraints>
     <ChoiceBox fx:id="RoleField" prefHeight="26.0" prefWidth="126.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
     <Label prefHeight="18.0" prefWidth="52.0" text="Rol" GridPane.rowIndex="3" />
-    <Label text="Parola" GridPane.rowIndex="2" />
+    <Label text="Password" GridPane.rowIndex="2" />
     <Label text="Username" GridPane.rowIndex="1" />
-    <Label prefHeight="31.0" prefWidth="196.0" text="Adauga datele " />
+    <Label prefHeight="31.0" prefWidth="196.0" />
     <PasswordField fx:id="PasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <TextField fx:id="UsernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-    <Button mnemonicParsing="false" onAction="#login_check" prefHeight="72.0" prefWidth="147.0" text="Autentificare" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+    <Button mnemonicParsing="false" onAction="#login_check" prefHeight="72.0" prefWidth="147.0" text="Login" GridPane.columnIndex="3" GridPane.rowIndex="4" />
    <Button mnemonicParsing="false" onAction="#goBack" text="back" GridPane.columnIndex="3" />
    <Label fx:id="login_test" prefHeight="62.0" prefWidth="186.0" textFill="#ea0808" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
