--- a/src/main/resources/fxml/tableview_readersdata.fxml
+++ b/src/main/resources/fxml/tableview_readersdata.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableViewReadersController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableViewReadersController">
    <children>
-      <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Date cititori" />
+      <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Readers data" />
       <Button layoutX="496.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="80.0" text="Back" />
       <TableView fx:id="tableView" layoutX="14.0" layoutY="78.0" onMouseClicked="#handleViewBorrowedBooks" prefHeight="309.0" prefWidth="564.0">
         <columns>
