--- a/src/main/resources/fxml/tableview_refund.fxml
+++ b/src/main/resources/fxml/tableview_refund.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableviewRefundController">
     <children>
-        <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Carti imprumutate:" />
+        <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Borrowed books" />
         <Button layoutX="541.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="86.0" text="Back" />
         <TableView fx:id="tableView" layoutX="8.0" layoutY="77.0" prefHeight="309.0" prefWidth="430.0">
             <columns>
@@ -13,9 +13,9 @@
                 <TableColumn fx:id="bookColumn" prefWidth="307.0" text="Book" />
             </columns>
         </TableView>
-      <Label layoutX="438.0" layoutY="77.0" prefHeight="25.0" prefWidth="138.0" text="Introdu titlul:" />
+      <Label layoutX="438.0" layoutY="77.0" prefHeight="25.0" prefWidth="138.0" text="Add a title" />
       <TextField fx:id="refundField" layoutX="445.0" layoutY="116.0" prefHeight="55.0" prefWidth="183.0" />
-      <Button layoutX="445.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleRefundaction" prefHeight="43.0" prefWidth="183.0" text="Restituire" />
+      <Button layoutX="445.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleRefundaction" prefHeight="43.0" prefWidth="183.0" text="Return book" />
       <Label fx:id="refundMessageField" layoutX="444.0" layoutY="263.0" prefHeight="43.0" prefWidth="183.0" />
       <Label fx:id="refundMessageField1" layoutX="447.0" layoutY="318.0" prefHeight="55.0" prefWidth="190.0" />
     </children>
