--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -18,8 +18,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <ChoiceBox fx:id="RoleField" prefHeight="26.0" prefWidth="126.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-    <Label prefHeight="18.0" prefWidth="52.0" text="Rol" GridPane.rowIndex="3" />
+    <Label prefHeight="18.0" prefWidth="52.0" GridPane.rowIndex="3" />
     <Label text="Password" GridPane.rowIndex="2" />
     <Label text="Username" GridPane.rowIndex="1" />
     <Label prefHeight="31.0" prefWidth="196.0" />
