--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -20,12 +20,12 @@
     </rowConstraints>
     <Label prefHeight="18.0" prefWidth="52.0" GridPane.rowIndex="3" />
     <Label text="Password" GridPane.rowIndex="2" />
-    <Label text="Username" GridPane.rowIndex="1" />
+    <Label prefHeight="18.0" prefWidth="115.0" text="Username" GridPane.rowIndex="1" />
     <Label prefHeight="31.0" prefWidth="196.0" />
     <PasswordField fx:id="PasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <TextField fx:id="UsernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-    <Button mnemonicParsing="false" onAction="#login_check" prefHeight="72.0" prefWidth="147.0" text="Login" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-   <Button mnemonicParsing="false" onAction="#goBack" text="back" GridPane.columnIndex="3" />
-   <Label fx:id="login_test" prefHeight="62.0" prefWidth="186.0" textFill="#ea0808" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Button mnemonicParsing="false" onAction="#login_check" prefHeight="72.0" prefWidth="147.0" text="Login" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+   <Button mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="74.0" text="Back" GridPane.columnIndex="3" />
+   <Label fx:id="login_test" prefHeight="63.0" prefWidth="120.0" textFill="#ea0808" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
 </GridPane>
