--- a/src/main/resources/fxml/tableview_booksdata.fxml
+++ b/src/main/resources/fxml/tableview_booksdata.fxml
@@ -4,21 +4,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableViewBooksController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableViewBooksController">
     <children>
         <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Available books" />
-        <Button layoutX="483.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="86.0" text="Back" />
-        <TableView fx:id="tableView" layoutX="8.0" layoutY="77.0" prefHeight="309.0" prefWidth="430.0">
+        <Button layoutX="483.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="94.0" text="Back" />
+        <TableView fx:id="tableView" layoutX="8.0" layoutY="77.0" prefHeight="364.0" prefWidth="443.0">
             <columns>
-                <TableColumn fx:id="titleColumn" prefWidth="123.0" text="Title" />
-                <TableColumn fx:id="authorColumn" prefWidth="111.0" text="Author" />
-                <TableColumn fx:id="durationColumn" minWidth="0.0" prefWidth="99.0" text="Duration (days)" />
+                <TableColumn fx:id="titleColumn" prefWidth="121.20000648498535" text="Title" />
+                <TableColumn fx:id="authorColumn" prefWidth="98.79998779296875" text="Author" />
+                <TableColumn fx:id="durationColumn" minWidth="0.0" prefWidth="114.20001220703125" text="Duration (days)" />
                 <TableColumn fx:id="piecesColumn" prefWidth="96.0" text="Available pieces" />
             </columns>
         </TableView>
-      <TextField fx:id="titleField" layoutX="443.0" layoutY="112.0" prefHeight="29.0" prefWidth="126.0" />
-      <Label layoutX="443.0" layoutY="77.0" prefHeight="17.0" prefWidth="126.0" text="Add a Title" />
-      <Button layoutX="483.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleBorrowAction" prefHeight="43.0" prefWidth="86.0" text="Borrow" />
+      <TextField fx:id="titleField" layoutX="459.0" layoutY="114.0" prefHeight="30.0" prefWidth="118.0" />
+      <Label layoutX="459.0" layoutY="77.0" prefHeight="18.0" prefWidth="110.0" text="Add a Title" />
+      <Button layoutX="483.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleBorrowAction" prefHeight="43.0" prefWidth="94.0" text="Borrow" />
       <Text fx:id="borrowMessage" fill="#f80a0a" layoutX="443.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="125.99999958276749" />
     </children>
 </AnchorPane>
