--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.LoginController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.controllers.LoginController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,10 +22,9 @@
     <Label text="Password" GridPane.rowIndex="2" />
     <Label prefHeight="18.0" prefWidth="115.0" text="Username" GridPane.rowIndex="1" />
     <Label prefHeight="31.0" prefWidth="196.0" />
-    <PasswordField fx:id="PasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <TextField fx:id="UsernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <PasswordField fx:id="PasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <Button mnemonicParsing="false" onAction="#login_check" prefHeight="72.0" prefWidth="147.0" text="Login" GridPane.columnIndex="3" GridPane.rowIndex="3" />
    <Button mnemonicParsing="false" onAction="#goBack" prefHeight="34.0" prefWidth="74.0" text="Back" GridPane.columnIndex="3" />
    <Label fx:id="login_test" prefHeight="63.0" prefWidth="120.0" textFill="#ea0808" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-
 </GridPane>
