--- a/src/main/resources/fxml/reader.fxml
+++ b/src/main/resources/fxml/reader.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.ReaderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.controllers.ReaderController">
    <children>
       <Button layoutX="37.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleBorrowButton" prefHeight="92.0" prefWidth="216.0" text="Borrow books" />
       <Button layoutX="327.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleRefundButton" prefHeight="92.0" prefWidth="222.0" text="Return books" />
