--- a/src/main/resources/fxml/readersregistration.fxml
+++ b/src/main/resources/fxml/readersregistration.fxml
@@ -12,7 +12,7 @@
 
 <GridPane alignment="center" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
           minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.171"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.ReadersRegistrationController">
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.controllers.ReadersRegistrationController">
     <columnConstraints>
         <ColumnConstraints/>
     </columnConstraints>
@@ -44,6 +44,11 @@
                         <Insets right="5.0"/>
                     </GridPane.margin>
                 </TextField>
+                <PasswordField fx:id="passwordField2" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <GridPane.margin>
+                        <Insets right="5.0"/>
+                    </GridPane.margin>
+                </PasswordField>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username*:" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets left="5.0"/>
@@ -87,11 +92,7 @@
                         <Insets left="5.0"/>
                     </GridPane.margin>
                 </Text>
-                <PasswordField fx:id="passwordField2" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                    <GridPane.margin>
-                        <Insets right="5.0"/>
-                    </GridPane.margin>
-                </PasswordField>
+
                 <Button mnemonicParsing="false" onAction="#goBack" text="Back"
                         GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                     <GridPane.margin>
