--- a/src/main/resources/fxml/tableview_borrowdata.fxml
+++ b/src/main/resources/fxml/tableview_borrowdata.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registration.controllers.TableViewBorrowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.controllers.TableViewBorrowController">
     <children>
         <Label layoutX="14.0" layoutY="21.0" prefHeight="43.0" prefWidth="219.0" text="Borrowed books" />
         <Button layoutX="483.0" layoutY="21.0" mnemonicParsing="false" onAction="#goBack" prefHeight="43.0" prefWidth="86.0" text="Back" />
